--- a/crypto.css
+++ b/crypto.css
@@ -1,13 +1,14 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: 	#F7FFE5;
+    background-color: 	#f5ffdf;
     padding-top: 2rem;
   }
 
   h1 {
     text-align: center;
     color: rgb(71, 71, 71);
+    font-family: 'Oswald', sans-serif;
   }
   
   .loading {
@@ -35,29 +36,80 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
+    color: rgb(44, 44, 44);
     }
 
   .cryptocurrency img {
     width: 100px;
     height: 100px;
     margin-right: 10px;
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   }
   
-  .cryptocurrency .details {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    border: 2px solid #c2c2c2;
-    padding: 22px;
-  }
   
-  .cryptocurrency .name {
-    font-size: 12px;
+  @-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.cryptocurrency .details {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 20px 0px 20px 20px;
+  -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  background-color: 	#e3e9d6;
+  border-radius: 30px;
+}
+
+ @-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+}
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+  }
+}
+
+
+.cryptocurrency .name {
+    font-size: 16px;
+    font-weight: 600;
     margin: 2px 0px 2px 0px;
   }
   
   .cryptocurrency .rate {
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
   }
   
